--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,6 @@
         android:text="一言"
         android:fontFamily="@font/hrd"
         app:layout_constraintTop_toTopOf="@id/guideline_10_percent"
-        android:textSize="94sp"
         android:textStyle="bold"
         android:background="@null"
         android:textColor="@color/setting_title"
@@ -48,8 +47,8 @@
         android:overScrollMode="never"
         android:paddingStart="32dp"
         android:paddingEnd="32dp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline_90_percent"
-        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />
+        app:layout_constraintTop_toTopOf="@+id/guideline_30_percent"
+        app:layout_constraintBottom_toTopOf="@+id/guideline_90_percent" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_90_percent"
